--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ env/
 .venv/
 *.env
 migrations/
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
