Refactoring code and ADD schemas

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,17 @@
-version: "3.9"
-
 services:
   web:
     build: .
-    container_name: api_financas
+    container_name: finance_api
     ports:
       - "5000:5000"
     volumes:
       - .:/app
     environment:
-      - FLASK_APP=app.py
+      - FLASK_APP=app/app.py
       - FLASK_RUN_HOST=0.0.0.0
       - FLASK_ENV=development
       - FLASK_DEBUG=1
-      - DATABASE_URL=postgresql://postgres:passwordb@db:5432/financas_api
+      - DATABASE_URL=postgresql://dbuser:dbpassword@db:5432/finance_db
     depends_on:
       - db
 
@@ -21,9 +19,9 @@ services:
     image: postgres:15
     container_name: postgres_db
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: passwordb
-      POSTGRES_DB: financas_api
+      POSTGRES_USER: dbuser
+      POSTGRES_PASSWORD: dbpassword
+      POSTGRES_DB: finance_db
     ports:
       - "5432:5432"
     volumes:
