--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ Flask-SQLAlchemy==3.1.1
 psycopg2-binary==2.9.10
 python-dotenv==1.1.1
 Werkzeug==3.1.3
-Email-validator==2.3.0
 flask-jwt-extended==4.7.1
+flask-marshmallow==1.3.0
